# getsitemap

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: tests.yml
docs/source/: conf.py  index.rst
getsitemap/: __init__.py  retrieve_sitemap.py
src/getsitemap/: __init__.py  retrieve_sitemap.py
tests/: conftest.py  test_retrieve_sitemap.py
tests/fixtures/: test_sitemap.xml
www/: app.py
www/templates/: index.html
