[build-system]
requires = ["flit_core >=3.2,<4", "requests", "bs4"]
build-backend = "flit_core.buildapi"

[project]
name = "getsitemap"
authors = [{name = "capjamesg", email = "jamesg@jamesg.blog"}]
dynamic = ["version", "description"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
python_paths = ["src"]
testpaths = ["tests"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
