[metadata]
name = getsitemap
version = 0.1.1
author = capjamesg
author_email = jamesg@jamesg.blog
description = A Python library that retrieves all URLs in the sitemaps on a website. 
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/capjamesg/getsitemap
project_urls =
    Bug Tracker = https://github.com/capjamesg/getsitemap/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

